# gcpkg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  runcommand.sh
Source/: CMakeLists.txt  main.cpp
Source/Basic/: CMakeLists.txt
Source/Basic/DockerExecutor/: CMakeLists.txt  ExecuteInContainer.cpp  ExecuteInContainer.h  RunContainer.cpp  RunContainer.h
Source/Basic/SystemIntegrate/: CMakeLists.txt
Source/Basic/SystemIntegrate/CommandExecutor/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h
Source/Basic/Utils/: CMakeLists.txt  VariableProcessor.cpp  VariableProcessor.h
Source/MainProcess/: BuildPlanner.cpp  BuildPlanner.h  BuildSystemAnalysis.cpp  BuildSystemAnalysis.h  CMakeLists.txt  CreatePortFile.cpp  CreatePortFile.h  CreateProjectFile.cpp  CreateProjectFile.h  DependenciesAnalysis.cpp  DependenciesAnalysis.h  EnvironmentSetup.cpp  EnvironmentSetup.h  InstallProcess.cpp  InstallProcess.h  InstallationContext.cpp  InstallationContext.h  InstallationOrchestrator.cpp  InstallationOrchestrator.h
Source/MainProcess/GcpkgMetaCommand/: CMakeLists.txt  DecompressCommand.cpp  DecompressCommand.h  DownloadCommand.cpp  DownloadCommand.h  MetaCommand.h
